# parsa

./: README.md
crates/ast/: Cargo.toml
crates/hir/: Cargo.toml
crates/lexer/: Cargo.toml
crates/parsa/: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/src/: sink.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
test/: Cargo.toml
