[package]
authors = ["Reza Hajianpour <hajianpour.mr@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "test"
version = "0.1.0"

[package.metadata]
cargo-fuzz = true

[workspace]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
ast = {path = "../crates/ast"}
hir = {path = "../crates/hir"}
libfuzzer-sys = "0.4.3"
parser = {path = "../crates/parser"}
