[package]
authors = ["Reza Hajianpour <hajianpour.mr@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "hir"
version = "0.1.0"

[dependencies]
ast = {path = "../ast"}
la-arena = "0.2.1"
smol_str = "0.1.23"
syntax = {path = "../syntax"}

[dev-dependencies]
parser = {path = "../parser"}
